--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,24 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     color: #434455;
+    display:flex;
+    flex-direction: column;
 }
 
-ul {
+.list {
     list-style-type: none;
+}
+
+.link {
+    text-decoration: none;
 }
 
 .hidden {
     display: none;
+}
+
+button {
+    cursor: pointer;
 }
 
 .logo {
@@ -20,6 +30,5 @@ ul {
     font-weight: 700;
     letter-spacing: 0.03em;
     line-height: 1.17;
-    text-decoration: none;
 }
 
