--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     letter-spacing: 0.02em;
 }
 
-.list {
+ul {
     list-style-type: none;
 }
 
@@ -18,12 +18,30 @@ button {
     cursor: pointer;
 }
 
+img {
+    display: block;
+}
+
 .container {
-    display: flex;
-    flex-direction: column;
+    width: 1158px;
+    margin: 0, auto;
+    padding: 0, 15px;
 }
 
 /* -----Header classes----- */
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.container-header {
+    display: flex;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -32,6 +50,7 @@ button {
     letter-spacing: 0.03em;
     line-height: 1.17;
     text-decoration: none;
+    margin-right: 76px;
     color: #4D5AE5;
 }
 
@@ -39,11 +58,13 @@ button {
 color:#2E2F42;
 }
 
-.list {
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-color: #2E2F42;
+.menu {
+    display: flex;
+    gap: 40px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2E2F42;
 }
 
 .contacts{
@@ -51,6 +72,8 @@ color: #2E2F42;
 }
 
 .contacts-list {
+display: flex;
+gap: 40px;
 font-size: 16px;
 line-height: 1.5;
 color: #434455;
@@ -62,6 +85,7 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px;
+padding: 24px, 0;
 color: #434455;
 text-decoration: none;
 }
@@ -69,16 +93,21 @@ text-decoration: none;
 .link:hover,
 .link:focus {
     color: #404BBF;
+    text-decoration: underline;
 }
 
 /* -----MAIN Styles---- */
 /* -----Section 1----- */
+.section {
+    padding: 188px, 0;
+}
 
 .hero {
     background-color: #2E2F42 ;
 }
 
 .title {
+max-width: 496px;
 font-size: 56px;
 font-weight: 700;
 line-height: 1.07;
@@ -87,12 +116,18 @@ color: #FFFFFF;
 }
 
 .knob {   /* button*/
+display: block;
+min-width: 169px;
+height: 56px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #FFFFFF;
-background-color: #4D5AE5;
+background-color: #4d5ae5;
 color: #FFFFFF;
 }
 
@@ -102,8 +137,26 @@ color: #FFFFFF;
 }
 
 /* -----Section 2----- */
+.section-2 {
+    padding: 120px, 0;
+}
+
+.section-2-list {
+    display: flex;
+    gap: 24px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2E2F42;
+}
+
+.section-2-list-item {
+    width: calc(100%-72px)/4;
+}
+
 .list-title{
-    font-size: 20px;
+margin-bottom: 8px;
+font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 color:#2E2F42;
@@ -118,9 +171,11 @@ color: #434455;
 /* -----Section 3----- */
 .section-team {
     background-color: #F4F4FD;
+    padding: 120px, 0;
 }
 
-.section-title {
+.section-3-title {
+margin-bottom: 72px;
 font-size: 36px;
 font-weight: 700;
 line-height: 1.11;
@@ -129,20 +184,114 @@ color: #2E2F42;
 text-align: center;
 }
 
-.team {
-    background-color: #FFFFFF;
+.section-3-list {
+    display: flex;
+    gap: 24px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2E2F42;    
 }
 
+.team {
+    background-color: #FFFFFF;
+    width: calc(100-72)/4;
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-container {
+    padding: 32px 0;
+}
+
+.section-3-list-title {
+text-align: center;
+margin-bottom: 8px;
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+color:#2E2F42;
+}
+
+.section-3-list-description {
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #434455;
+}
+
+/* -----Section-4----- */
+.section-4 {
+    padding: 120px 0;
+}
+
+.section-4-title {
+margin-bottom: 72px;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+text-transform: capitalize;
+color: #2E2F42;
+text-align: center;
+}
+
+.section-4-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #2E2F42;
+}
+
+.section-4-item {
+    width: calc(100%-48)/3;
+}
+
+.section-4-list-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
+.section-4-list-title {
+    margin-bottom: 8px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    color:#2E2F42;    
+}
 /* -----Footer----- */
 .page-bottom {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
+
+.page-bottom-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    line-height: 1.17;
+    text-decoration: none;
+    margin-right: 76px;
+    color: #4D5AE5;
+}
+
 .page-bottom-span {
     color: #F4F4FD;
 }
 
 .page-bottom-description {
+max-width: 264px;
 font-size: 16px;
 line-height: 1.45;
 color: #F4F4FD;
 }
+
+
+
