--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@ body {
     letter-spacing: 0.02em;
 }
 
-ul {
+ul, ol {
     list-style-type: none;
+    padding-left: 0;
 }
 
 .hidden {
@@ -25,7 +26,7 @@ img {
 .container {
     width: 1158px;
     margin: 0, auto;
-    padding: 0, 15px;
+    padding: 0 15px;
 }
 
 /* -----Header classes----- */
@@ -85,7 +86,7 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px;
-padding: 24px, 0;
+padding: 24px 0;
 color: #434455;
 text-decoration: none;
 }
@@ -99,7 +100,7 @@ text-decoration: none;
 /* -----MAIN Styles---- */
 /* -----Section 1----- */
 .section {
-    padding: 188px, 0;
+    padding: 188px 0;
 }
 
 .hero {
@@ -138,7 +139,7 @@ color: #FFFFFF;
 
 /* -----Section 2----- */
 .section-2 {
-    padding: 120px, 0;
+    padding: 120px 0;
 }
 
 .section-2-list {
@@ -171,7 +172,7 @@ color: #434455;
 /* -----Section 3----- */
 .section-team {
     background-color: #F4F4FD;
-    padding: 120px, 0;
+    padding: 120px 0;
 }
 
 .section-3-title {
