--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ color: #434455;
     padding: 120px 0;
 }
 
-.section-team-title {
+.section-team-tittle {
 margin-bottom: 72px;
 font-size: 36px;
 font-weight: 700;
@@ -201,7 +201,7 @@ text-align: center;
     padding: 32px 0;
 }
 
-.section-team-list-title {
+.section-team-list-tittle {
 text-align: center;
 margin-bottom: 8px;
 font-size: 20px;
@@ -222,7 +222,7 @@ color:#2E2F42;
     padding: 120px 0;
 }
 
-.section-portfolio-title {
+.section-portfolio-tittle {
 margin-bottom: 72px;
 font-size: 36px;
 font-weight: 700;
@@ -253,7 +253,7 @@ text-align: center;
     border-top: none;
 }
 
-.section-portfolio-list-title {
+.section-portfolio-list-tittle {
     margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
