--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ ul, ol {
 
 .hidden {
     display: none;
+    
 }
 
 button {
@@ -149,7 +150,7 @@ color: #FFFFFF;
 }
 
 .section-info-list-item {
-    width: calc(100%-72px)/4;
+    width: calc((100% - 72px) / 4);
 }
 
 .list-title{
@@ -193,7 +194,7 @@ text-align: center;
 
 .team {
     background-color: #FFFFFF;
-    width: calc(100-72)/4;
+    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
 }
 
